src/test/ui/never_type/fallback-closure-wrap.stderr
error[E0271]: type mismatch resolving `<[closure@$DIR/fallback-closure-wrap.rs:4:40: 7:6] as FnOnce<()>>::Output == ()`
  --> $DIR/fallback-closure-wrap.rs:4:31
   |
LL |       let error = Closure::wrap(Box::new(move || {
   |  _______________________________^
LL | |
LL | |         panic!("Can't connect to server.");
LL | |     }) as Box<dyn FnMut()>);
   | |______^ expected `()`, found `!`
   |
   = note: expected unit type `()`
                   found type `!`
   = note: required for the cast to the object type `dyn FnMut()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
